--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["wasm_offload_procmacro"]
+members = ["wasm_offload", "wasm_offload_example", "wasm_offload_procmacro", "wasm_offload_wasmtime"]
