--- a/wasm_offload_procmacro/Cargo.toml
+++ b/wasm_offload_procmacro/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2021"
 proc-macro = true
 
 [dependencies]
+heck = "0.5.0"
 proc-macro2 = "1.0.87"
 quote = "1.0.37"
 syn = { version = "2.0.79", features = ["full"] }
+uuid = "1.11.0"
+wit-encoder = "0.219.1"
